<resources>
    <string name="app_name">TimeTracker</string>

    <!--  LoginFragment  -->
    <string name="login_fragment_title">Login</string>
    <string name="login_fragment_error_msg_user_must_be_logged_in">You must be logged in to use this app</string>
    <string name="login_fragment_login_button_label">Login or Sign Up</string>
    <string name="login_fragment_login_failed">Login failed</string>

    <!--  HomeFragment  -->
    <string name="home_fragment_title">Home</string>

    <!--  DrawerLayout  -->
    <string name="drawer_layout_home_action_label">Home</string>
    <string name="drawer_layout_settings_action_label">Settings</string>
    <string name="drawer_layout_users_action_label">Users</string>
    <string name="drawer_layout_managers_action_label">Managers</string>

    <!--  SettingsFragment  -->
    <string name="settings_fragment_title">Settings</string>
    <string name="settings_fragment_action_edit_label">Edit</string>
    <string name="settings_fragment_name_label">Name</string>
    <string name="settings_fragment_email_label">Email</string>
    <string name="settings_fragment_role_label">Role</string>
    <string name="settings_fragment_preferred_working_hours_label">Preferred Working Hours per Day</string>
    <string name="settings_fragment_preferred_working_hours_placeholder">Add</string>
    <string name="settings_fragment_logout_button_label">Logout</string>
    <string name="settings_fragment_logout_confirmation_dialog_title">Please Confirm</string>
    <string name="settings_fragment_logout_confirmation_dialog_body">Are you sure you want to logout?</string>

    <!--  Roles  -->
    <string name="role_regular_label">Regular</string>
    <string name="role_manager_label">Manager</string>
    <string name="role_admin_label">Admin </string>

    <!--  DialogButtons  -->
    <string name="dialog_button_positive">OK</string>
    <string name="dialog_button_negative">Cancel</string>

    <!--  CreateUserFragment  -->
    <string name="create_user_fragment_title">Create User</string>
    <string name="create_user_fragment_action_save_label">Save</string>
    <string name="create_user_fragment_select_user_role_menu_label">User Role</string>
    <string name="create_user_fragment_name_label">Name</string>
    <string name="create_user_fragment_email_label">Email</string>
    <string name="create_user_fragment_password_label">Password</string>
    <string name="create_user_fragment_error_invalid_name">Please enter your name</string>
    <string name="create_user_fragment_error_invalid_email">Please enter valid email</string>
    <string name="create_user_fragment_error_invalid_password">Password length must be at least 6</string>

    <!--  UsersFragment  -->
    <string name="users_fragment_title">Users</string>
    <string name="users_fragment_create_new_user_label">Create New User</string>

    <!--  EditUserFragment  -->
    <string name="edit_user_fragment_title">Edit User</string>
    <string name="edit_user_fragment_action_save_label">Save</string>
    <string name="edit_user_fragment_action_delete_label">Delete</string>
    <string name="edit_user_fragment_select_user_role_menu_label">User Role</string>
    <string name="edit_user_fragment_name_label">Name</string>
    <string name="edit_user_fragment_email_label">Email</string>
    <string name="edit_user_fragment_error_invalid_name">Please enter your name</string>
    <string name="edit_user_fragment_error_invalid_email">Please enter valid email</string>
    <string name="edit_user_fragment_delete_user_confirmation_dialog_title">Please Confirm</string>
    <string name="edit_user_fragment_delete_user_confirmation_dialog_body">Are you sure you want to delete this user? You cannot undo this action.</string>

    <!--  WorkLogFragment  -->
    <string name="work_log_fragment_title">Work Log</string>
    <string name="work_log_fragment_action_save_label">Save</string>
    <string name="work_log_fragment_action_delete_label">Delete</string>
    <string name="work_log_fragment_task_label">Tasks Worked On</string>
    <string name="work_log_fragment_hours_label">Hours Work</string>
    <string name="work_log_fragment_date_label">Date (dd/mm/yyyy)</string>
    <string name="work_log_fragment_invalid_date_error_msg">Date cannot be in future</string>
    <string name="work_log_fragment_invalid_tasks_text_error_msg">Tasks cannot be empty</string>
    <string name="work_log_fragment_work_log_id_missing_error_msg">Work log id is required to delete a work log</string>
    <string name="work_log_fragment_delete_work_log_confirmation_dialog_title">Please Confirm</string>
    <string name="work_log_fragment_delete_work_log_confirmation_dialog_body">Are you sure you want to delete this work log? You cannot undo this action.</string>

    <!--  WorkLogsFragment  -->
    <string name="work_logs_fragment_title">Work Logs</string>
    <string name="work_logs_fragment_create_work_log_action_label">Create Work Log</string>
    <string name="work_logs_fragment_action_filter_label">Filter</string>
    <string name="work_logs_fragment_export_fab_label">Export</string>
    <string name="work_logs_fragment_filter_text_formatted">Filter Active: %1$s - %2$s</string>
    <string name="work_logs_fragment_share_html_sheet_choose_title">Please select an app to share your sheet</string>
    <string name="work_logs_fragment_share_html_failure_msg">Unable to share file due to unknown reason</string>
    <string name="work_logs_fragment_preferred_working_hours_value_text">Preferred working hours: %1$.1f</string>

    <!--   SelectUserActionDialog     -->
    <string name="dialog_select_user_action_edit_user_label">Edit User</string>
    <string name="dialog_select_user_action_open_user_work_logs_label">Open User Work Logs</string>


    <!--  SelectPreferredWorkingHoursDialog  -->
    <string name="select_preferred_working_hours_dialog_fragment_title">Select Preferred Working Hours (per Day) Count</string>
    <string name="select_preferred_working_hours_dialog_ok_button_label">OK</string>
    <string name="select_preferred_working_hours_dialog_cancel_button_label">Cancel</string>
</resources>
