<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.settings.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/name_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_fragment_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        android:id="@+id/email_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_fragment_email_label"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/name_label_text_view" />

    <TextView
        android:id="@+id/role_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_fragment_role_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/email_label_text_view" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labels_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="name_label_text_view,email_label_text_view,role_label_text_view" />

    <TextView
        android:id="@+id/name_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/labels_barrier"
        app:layout_constraintTop_toTopOf="@id/name_label_text_view"
        tools:text="Ramiz Raja" />

    <TextView
        android:id="@+id/email_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/labels_barrier"
        app:layout_constraintTop_toTopOf="@id/email_label_text_view"
        tools:text="something@xyz.com" />

    <TextView
        android:id="@+id/role_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/labels_barrier"
        app:layout_constraintTop_toTopOf="@id/role_label_text_view"
        tools:text="Regular" />

    <TextView
        android:id="@+id/working_hours_count_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_fragment_preferred_working_hours_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/role_label_text_view" />

    <TextView
        android:id="@+id/working_hours_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:minWidth="50dp"
        android:padding="4dp"
        android:text="@string/settings_fragment_preferred_working_hours_placeholder"
        app:layout_constraintStart_toEndOf="@id/working_hours_count_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/role_label_text_view" />

    <ImageView
        android:id="@+id/clear_working_hours_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_clear_24"
        app:layout_constraintBottom_toBottomOf="@id/working_hours_value_text_view"
        app:layout_constraintStart_toEndOf="@id/working_hours_value_text_view"
        app:layout_constraintTop_toTopOf="@id/working_hours_value_text_view"
        app:tint="@android:color/darker_gray" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/preferred_working_hours_views_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="working_hours_count_label_text_view,working_hours_value_text_view" />

    <Button
        android:id="@+id/sign_out_button"
        style="@style/App.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/settings_fragment_logout_button_label"
        android:minWidth="@dimen/min_text_field_width"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/working_hours_count_label_text_view" />

    <include
        android:id="@+id/settings_progress_bar"
        layout="@layout/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
