<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createuser.CreateUserFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_text_input_layout"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:minWidth="@dimen/min_text_field_width">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/work_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/work_log_fragment_task_label"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hours_exposed_dropdown_menu"
                style="@style/App.Widget.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/work_log_fragment_hours_label"
                android:minWidth="@dimen/min_text_field_width">

                <AutoCompleteTextView
                    android:id="@+id/hours_auto_complete_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/date_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/work_log_fragment_date_label" />

            <TextView
                android:id="@+id/date_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:minWidth="@dimen/min_text_field_width"
                android:background="@color/background"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                tools:text="01/02/2020" />
        </LinearLayout>

        <include
            android:id="@+id/loader"
            layout="@layout/progress_bar" />
    </FrameLayout>

</ScrollView>
